# TRT_TritonServer_example

./: .gitignore  ENV.md  【完整】Pytorch 注册自定义操作.md
TRT-TritonServer-Lesson/: 01-01-TensorRT_Introduction.ipynb  01-02-TensorRT_Engine_Build.ipynb  01-03-TensorRT_API.ipynb  01-04-TensorRT_Plugin.ipynb  02-01-YOLO_PreProcessing.ipynb  02-02-YOLO_PostProcessing.ipynb  02-03-YOLO_Detection.ipynb  02-04-Ultralytics_OBB.ipynb  02-05-YOLO_Segmentation.ipynb  02-06-YOLO_Pose_Estimation.ipynb  04-01-TensorRT_Multiple_Execution_Contexts.ipynb  README.md  rise.css
TRT-TritonServer-Lesson/course_codes/01.03.TensorRTAPI/: CMakeLists.txt  README.md
TRT-TritonServer-Lesson/course_codes/01.03.TensorRTAPI/src/: build.cpp  infer.cpp
TRT-TritonServer-Lesson/course_codes/01.04.MatrixAddPlugin/: CMakeLists.txt  README.md
TRT-TritonServer-Lesson/course_codes/01.04.MatrixAddPlugin/src/: matrixAddInference.cu  matrixAddInference.h  matrixAddPlugin.cpp  matrixAddPlugin.h  pluginRegistration.cpp  pluginRegistration.h  pluginUtils.cpp  pluginUtils.h
TRT-TritonServer-Lesson/course_codes/02.01.01.WarpAffine/: CMakeLists.txt  README.md
TRT-TritonServer-Lesson/course_codes/02.01.01.WarpAffine/src/: warp_affine.cu
TRT-TritonServer-Lesson/course_codes/02.01.02.BilinearWarpAffine/: CMakeLists.txt  README.md
TRT-TritonServer-Lesson/course_codes/02.01.02.BilinearWarpAffine/src/: bilinear_warp_affine.cu
TRT-TritonServer-Lesson/course_codes/02.01.03.MutliBilinearWarpAffine/: CMakeLists.txt  README.md
TRT-TritonServer-Lesson/course_codes/02.01.03.MutliBilinearWarpAffine/src/: mutli_bilinear_warp_affine.cu
TRT-TritonServer-Lesson/course_codes/02.02.CustomPlugin/: CMakeLists.txt  README.md
TRT-TritonServer-Lesson/course_codes/02.02.CustomPlugin/src/common/: vfcCommon.h
TRT-TritonServer-Lesson/course_codes/02.02.CustomPlugin/src/efficientIdxNMSPlugin/: README.md  efficientIdxNMSInference.cu  efficientIdxNMSInference.cuh  efficientIdxNMSInference.h  efficientIdxNMSParameters.h  efficientIdxNMSPlugin.cpp
TRT-TritonServer-Lesson/course_codes/02.02.CustomPlugin/src/efficientRotatedNMSPlugin/: README.md  efficientRotatedNMSInference.cu  efficientRotatedNMSInference.cuh  efficientRotatedNMSInference.h  efficientRotatedNMSParameters.h  efficientRotatedNMSPlugin.cpp
TRT-TritonServer-Lesson/course_codes/03.BaseInfer/: README.md
TRT-TritonServer-Lesson/course_codes/03.BaseInfer/examples/detect/: CMakeLists.txt  README.md  detect.cpp
TRT-TritonServer-Lesson/course_codes/03.BaseInfer/examples/obb/: README.md  labels.txt  obb.cpp
TRT-TritonServer-Lesson/course_codes/03.BaseInfer/examples/pose/: CMakeLists.txt  README.md  pose.cpp
TRT-TritonServer-Lesson/course_codes/03.BaseInfer/examples/segment/: CMakeLists.txt  README.md  segment.cpp
TRT-TritonServer-Lesson/course_codes/03.BaseInfer/include/: model.hpp
TRT-TritonServer-Lesson/course_codes/03.BaseInfer/source/: backend.cpp  backend.hpp  buffer.hpp  manager.cpp  manager.hpp  model.cpp
TRT-TritonServer-Lesson/course_codes/04.01.01.BaseInfer/: CMakeLists.txt  README.md
TRT-TritonServer-Lesson/course_codes/04.01.01.BaseInfer/examples/mutli_thread/: CMakeLists.txt  README.md  mutli_thread.cpp
TRT-TritonServer-Lesson/course_codes/04.01.01.BaseInfer/examples/obb/: README.md  obb.cpp
TRT-TritonServer-Lesson/course_codes/04.01.01.BaseInfer/source/: backend.cpp  backend.hpp  buffer.cpp  manager.cpp  manager.hpp  model.cpp  result.cpp  warpaffine.hpp
TRT-TritonServer-Lesson/course_codes/04.01.02.BaseInfer/: README.md
TRT-TritonServer-Lesson/course_codes/04.01.02.BaseInfer/examples/obb/: obb.cpp
TRT-TritonServer-Lesson/course_codes/04.01.02.BaseInfer/include/: model.hpp
TRT-TritonServer-Lesson/course_codes/04.01.02.BaseInfer/source/: backend.cpp  backend.hpp  manager.cpp  manager.hpp  warpaffine.cu
TRT-TritonServer-Lesson/course_codes/04.02.BaseInfer/: README.md
TRT-TritonServer-Lesson/course_codes/04.02.BaseInfer/examples/mutli_thread/: mutli_thread.cpp
TRT-TritonServer-Lesson/course_codes/04.02.BaseInfer/examples/obb/: CMakeLists.txt  README.md  obb.cpp
TRT-TritonServer-Lesson/course_codes/04.02.BaseInfer/include/: result.hpp
TRT-TritonServer-Lesson/course_codes/04.02.BaseInfer/source/: backend.cpp  backend.hpp  buffer.cpp  manager.cpp  manager.hpp
TRT-TritonServer-Lesson/course_codes/05.TritonYOLOServer/: README.md  dynamic_batch_client.py  requirements.txt  single_request_client.py  static_batch_client.py
TRT-TritonServer-Lesson/course_codes/05.TritonYOLOServer/trt_dy_bs_models/yolo11obb/: config.pbtxt
TRT-TritonServer-Lesson/course_codes/05.TritonYOLOServer/trt_models/yolo11obb/: config.pbtxt
TRT-TritonServer-Lesson/course_codes/05.TritonYOLOServer/utils/: general.py  obb_postprocess.py  processing.py
TRT-TritonServer-Lesson/course_codes/YOLOv11x_Export_Performance/: README.md
TRT-TritonServer-Lesson/course_data/models/MNIST/: README.md
TRT-TritonServer-Lesson/course_functions/: Pytorch 注册自定义操作.md  command_runner.py  head.py  inference.py  ploting.py
